hphp/hack/test/typecheck/reactive/rx_move5.php.exp
File "rx_move5.php", line 12, characters 11-12:
Variable $a is undefined, or there exists at least one control flow path reaching this point which does not define or unsets $a. (Naming[2050])
